--- a/backend/package.json
+++ b/backend/package.json
@@ -22,13 +22,15 @@
 		"helmet": "^7.0.0",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^7.3.4",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"socket.io": "^4.7.5"
 	},
 	"devDependencies": {
 		"tsx": "^3.12.7",
 		"typescript": "^5.3.3",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.4.2",
-		"@types/morgan": "^1.9.4"
+		"@types/morgan": "^1.9.4",
+		"@types/cors": "^2.8.17"
 	}
 }
