--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.11.0",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
