packeage install and setup folder structure

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --max-warnings=0"
   },
   "dependencies": {
     "next": "latest",
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "eslint": "^9.36.0",
     "eslint-config-next": "^15.5.3",
+    "eslint-plugin-react": "^7.37.5",
     "typescript": "latest"
   }
 }
