--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
           cache: 'npm'
           cache-dependency-path: |
             Backend/package.json
+      - name: Set CI env overrides
+        run: |
+          echo "SKIP_DB=1" >> $GITHUB_ENV
       - name: Install dependencies
         run: npm ci || npm install
       - name: Lint (skip if no eslint config)
